--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>tn.esprit.tpfoyer</groupId>
 	<artifactId>config-server</artifactId>
-	<version>1.0</version>
+	<version>1.0.0</version>
 	<name>config-server</name>
 	<description>config-server</description>
 	<url/>
@@ -68,6 +68,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.8.1</version>
+				<configuration>
+					<generateBackupPoms>false</generateBackupPoms>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 	 <distributionManagement>
