--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,3 +1,68 @@
+# mysql-deployment.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-config
+  namespace: myapp
+data:
+  mysql.cnf: |
+    [mysqld]
+    default_authentication_plugin=mysql_native_password
+    bind-address=0.0.0.0
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-db
+  namespace: myapp
+spec:
+  ports:
+    - port: 3306
+      targetPort: 3306
+      protocol: TCP
+  selector:
+    app: mysql
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mysql
+  namespace: myapp
+spec:
+  selector:
+    matchLabels:
+      app: mysql
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: mysql
+    spec:
+      containers:
+        - name: mysql
+          image: mysql:8.0
+          env:
+            - name: MYSQL_ALLOW_EMPTY_PASSWORD
+              value: "yes"
+            - name: MYSQL_DATABASE
+              value: "tpfoyer"
+          ports:
+            - containerPort: 3306
+              name: mysql
+          volumeMounts:
+            - name: mysql-persistent-storage
+              mountPath: /var/lib/mysql
+            - name: mysql-config
+              mountPath: /etc/mysql/conf.d
+      volumes:
+        - name: mysql-persistent-storage
+          emptyDir: {}
+        - name: mysql-config
+          configMap:
+            name: mysql-config
+---
+# spring-app-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,8 +80,6 @@ spec:
       labels:
         app: myapp
     spec:
-      hostNetwork: true  # Add this to access host network
-      dnsPolicy: ClusterFirstWithHostNet  # Add this for DNS resolution
       containers:
         - name: myapp
           image: lookabj/myapp:latest
@@ -25,7 +88,7 @@ spec:
             - containerPort: 8089
           env:
             - name: SPRING_DATASOURCE_URL
-              value: "jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false"
+              value: "jdbc:mysql://mysql-db:3306/tpfoyer?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false"
             - name: SPRING_DATASOURCE_USERNAME
               value: "root"
             - name: SPRING_DATASOURCE_PASSWORD
