--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -57,7 +57,7 @@ spec:
       - name: foyerapp
         image: hamouda1412/foyerproject:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 8089
         env:
         - name: SPRING_DATASOURCE_URL
           value: jdbc:mysql://mysql-service:3306/db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -65,6 +65,8 @@ spec:
           value: root
         - name: SPRING_DATASOURCE_PASSWORD
           value: root
+        - name: SERVER_ADDRESS
+          value: "0.0.0.0"
 ---
 # Foyer Application Service
 apiVersion: v1
@@ -75,7 +77,7 @@ spec:
   type: NodePort
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 8089
     nodePort: 30080  # Specify a port in the range 30000-32767
   selector:
     app: foyerapp
