--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Actuator/Metrics port
+management.server.port=8081
+management.endpoints.web.exposure.include=prometheus,health,info,metrics
+management.endpoint.health.show-details=always
+
+# Enable Prometheus endpoint
+management.prometheus.metrics.export.enabled=true
+management.metrics.tags.application=${spring.application.name}
+
+
 # Web Server (Tomcat) configuration :
 server.port=8089
 server.servlet.context-path=/tpfoyer
