Add monitoring stages v2

--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -1,16 +1,18 @@
-# service-monitor.yaml
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: spring-app-monitor
   namespace: myapp
   labels:
-    release: prometheus
+    release: prometheus-stack
 spec:
   selector:
     matchLabels:
       app: myapp
+  namespaceSelector:
+    matchNames:
+      - myapp
   endpoints:
-  - port: http
-    path: /actuator/prometheus
-    interval: 15s
+    - port: metrics
+      path: /actuator/prometheus
+      interval: 15s
