--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8089
 server.servlet.context-path=/tpfoyer
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
