--- a/prometheus-rbac.yaml
+++ b/prometheus-rbac.yaml
@@ -1,57 +1,27 @@
-# prometheus-rbac.yaml
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: prometheus-server
 rules:
-- apiGroups: [""]
-  resources:
-  - nodes
-  - nodes/proxy
-  - services
-  - endpoints
-  - pods
-  verbs: ["get", "list", "watch"]
-- apiGroups:
-  - extensions
-  - networking.k8s.io
-  resources:
-  - ingresses
-  verbs: ["get", "list", "watch"]
-- nonResourceURLs: ["/metrics"]
-  verbs: ["get"]
+  - apiGroups: [""]
+    resources: ["nodes", "nodes/proxy", "nodes/metrics", "services", "endpoints", "pods"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["extensions"]
+    resources: ["ingresses"]
+    verbs: ["get", "list", "watch"]
+  - nonResourceURLs: ["/metrics"]
+    verbs: ["get"]
 
 ---
-# grafana-dashboard.json
-{
-  "dashboard": {
-    "id": null,
-    "title": "Spring Boot Application Dashboard",
-    "panels": [
-      {
-        "title": "HTTP Request Total",
-        "type": "graph",
-        "datasource": "Prometheus",
-        "targets": [
-          {
-            "expr": "http_server_requests_seconds_count",
-            "legendFormat": "{{method}} {{status}}",
-            "refId": "A"
-          }
-        ]
-      },
-      {
-        "title": "Response Time",
-        "type": "graph",
-        "datasource": "Prometheus",
-        "targets": [
-          {
-            "expr": "rate(http_server_requests_seconds_sum[5m])",
-            "legendFormat": "{{uri}}",
-            "refId": "A"
-          }
-        ]
-      }
-    ]
-  }
-}
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: prometheus-server
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: prometheus-server
+subjects:
+  - kind: ServiceAccount
+    name: prometheus
+    namespace: myapp
