--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>0.8.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+
 
 
     </dependencies>
