--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -81,8 +81,8 @@ spec:
         app: myapp
       annotations:
         prometheus.io/scrape: "true"
-        prometheus.io/port: "8081"
-        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "8080"
+        prometheus.io/path: "/metrics"
     spec:
       containers:
         - name: myapp
