--- a/pom.xml
+++ b/pom.xml
@@ -72,4 +72,22 @@
         </plugins>
     </build>
 
+     <distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://192.168.118.177:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://192.168.118.177:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>        
+
+
+
+
+
+
+
+         
 </project>
