--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,112 @@
 version: '3.8'
-services:
-  mysql:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: 
-      MYSQL_DATABASE: stationSki
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-    ports:
-      - "3307:3306"
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      timeout: 20s
-      retries: 10
 
-  backend:
-    build: .
-    depends_on:
-      mysql:
-        condition: service_healthy
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/stationSki
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: 
+services:
+  # jenkins:
+  #   image: jenkins/jenkins:lts
+  #   user: root
+  #   ports:
+  #     - "8080:8080"
+  #     - "50000:50000"
+  #   volumes:
+  #     - jenkins_home:/var/jenkins_home
+  #     - /var/run/docker.sock:/var/run/docker.sock
+  #     - /usr/bin/docker:/usr/bin/docker
+  #     - /usr/bin/trivy:/usr/bin/trivy
+  #     - /usr/local/bin/kubectl:/usr/local/bin/kubectl
+  #     - /home/melek/.kube/config:/usr/share/.kube/config
+  #   container_name: jenkins
+  #   environment:
+  #     - KUBECONFIG=/usr/share/.kube/config
+
+  sonarqube:
+    image: sonarqube:latest
     ports:
-      - "8089:8089"
+      - "9000:9000"
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_extensions:/opt/sonarqube/extensions
+    container_name: sonarqube
+
+  nexus:
+    image: sonatype/nexus3
+    ports:
+      - "8081:8081"
+    volumes:
+      - nexus-data:/nexus-data
+    container_name: nexus
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - prometheus_data:/prometheus
+    container_name: prometheus
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    container_name: grafana
+
+  # gitlab:
+  #   image: gitlab/gitlab-ce:latest
+  #   ports:
+  #     - "8929:80"
+  #     - "8922:22"
+  #   volumes:
+  #     - gitlab_data:/var/opt/gitlab
+  #     - gitlab_logs:/var/log/gitlab
+  #     - gitlab_config:/etc/gitlab
+  #   environment:
+  #     - GITLAB_OMNIBUS_CONFIG=external_url 'http://gitlab.example.com'
+  #   container_name: gitlab
+
+  # jira:
+  #   image: atlassian/jira-software:latest
+  #   ports:
+  #     - "8082:8080"
+  #   volumes:
+  #     - jira_data:/var/atlassian/jira
+  #     - ./mysql-connector-java-5.1.49.jar:/opt/atlassian/jira/lib/mysql-connector-java-5.1.49.jar
+
+  #   environment:
+  #     - ATLASSIAN_JIRA_HOME=/var/atlassian/jira
+  #     - ATL_JDBC_URL=jdbc:mysql://mysql:3306/jiradb?useSSL=false&serverTimezone=UTC
+  #     - ATL_JDBC_USER=jira
+  #     - ATL_JDBC_PASSWORD=root
+  #     - JVM_SUPPORT_RECOMMENDED_ARGS=-classpath /opt/atlassian/jira/lib/mysql-connector-java-5.1.49.jar
+
+  #   container_name: jira
+  #   depends_on:
+  #     - mysql
+
+  # mysql:
+  #   image: mysql:8.0
+  #   ports:
+  #     - "3306:3306"
+  #   environment:
+  #     - MYSQL_ROOT_PASSWORD=root
+  #     - MYSQL_DATABASE=jiradb
+  #     - MYSQL_USER=jira
+  #     - MYSQL_PASSWORD=root
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
+  #   container_name: mysql
+
+volumes:
+  # jenkins_home:
+  nexus-data:
+  sonarqube_data:
+  sonarqube_logs:
+  sonarqube_extensions:
+  prometheus_data:
+  grafana_data:
+  # gitlab_data:
+  # gitlab_logs:
+  # gitlab_config:
+  # jira_data:
+  # mysql_data:
