--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
        
         stage('Clean') {
             steps {
-                sh "mvn clean install"
+                sh "mvn clean "
             }
         }
 
