--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
 
         stage('Clean') {
             steps {
-                sh "mvn clean install"
+                sh "mvn clean "
             }
         }
 
