--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,114 +9,124 @@ pipeline {
         SCANNER_HOME = tool 'sonar-scanner'
     }
 
-
     stages {
+        stage('Clean') {
+            steps {
+                sh "mvn clean"
+            }
+        }
 
-            stage('Clean') {
-                steps {
-                    sh "mvn clean "
+        stage('Setup DB') {
+            steps {
+                script {
+                    sh 'docker-compose up -d'
                 }
             }
+        }
 
-            stage('Setup DB') {
-                steps {
-                    script {
-                        sh 'docker-compose up -d'
+        stage('Compile') {
+            steps {
+                sh "mvn compile"
+            }
+        }
+
+        stage('Test') {
+            steps {
+                sh "mvn test -Dspring.profiles.active=local"
+            }
+        }
+
+        stage('Generate JaCoCo Report') {
+            steps {
+                sh "mvn jacoco:report"
+            }
+        }
+
+        stage('SonarQube Analysis') {
+            steps {
+                script {
+                    withSonarQubeEnv('sonar') {
+                        sh '''
+                            $SCANNER_HOME/bin/sonar-scanner \
+                            -Dsonar.projectName=etudiant-service \
+                            -Dsonar.projectKey=etudiant-service
+                        '''
                     }
                 }
             }
+        }
 
-            stage('Compile') {
-                steps {
-                    sh "mvn compile"
+        stage('Quality Gate') {
+            steps {
+                script {
+                    waitForQualityGate abortPipeline: true, credentialsId: 'sonar-token'
                 }
             }
-            stage('Test') {
-                steps {
-                    sh "mvn test -Dspring.profiles.active=local"
+        }
+
+        stage('Build') {
+            steps {
+                sh "mvn package -Dspring.profiles.active=local"
+            }
+        }
+
+        stage('Publish To Nexus') {
+            steps {
+                withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
+                    sh "mvn deploy -Dspring.profiles.active=local"
                 }
             }
+        }
 
-
-             stage('Generate JaCoCo Report') {
-                        steps {
-                              sh "mvn jacoco:report"
-                          }
-             }
-
-
-             stage('SonarQube Analysis') {
-                       steps {
-                           script {
-                               withSonarQubeEnv('sonar') {
-                                    sh '''
-                                        $SCANNER_HOME/bin/sonar-scanner \
-                                        -Dsonar.projectName=etudiant-service \
-                                        -Dsonar.projectKey=etudiant-service
-                                      '''
-
-                      }
-                  }
-             }
-
-            stage('Quality Gate') {
-                steps {
-                    script {
-                        waitForQualityGate abortPipeline: true, credentialsId: 'sonar-token'
+        stage('Build & Tag Docker Image') {
+            steps {
+                script {
+                    withDockerRegistry(credentialsId: 'docker-cred') {
+                        sh "docker build -t samixouerfelli/etudiant-service:latest ."
                     }
                 }
             }
+        }
 
-            stage('Build') {
-                steps {
-                    sh "mvn package -Dspring.profiles.active=local "
-                }
-            }
-
-            stage('Publish To Nexus') {
-                steps {
-                    withMaven(globalMavenSettingsConfig: 'global-settings', jdk: 'JDK17', maven: 'Maven3', traceability: true) {
-                        sh "mvn deploy -Dspring.profiles.active=local "
+        stage('Push Docker Image') {
+            steps {
+                script {
+                    withDockerRegistry(credentialsId: 'docker-cred') {
+                        sh "docker push samixouerfelli/etudiant-service:latest"
                     }
                 }
             }
+        }
 
-            stage('Build & Tag Docker Image') {
-                steps {
-                    script {
-                        withDockerRegistry(credentialsId: 'docker-cred') {
-                            sh "docker build -t samixouerfelli/etudiant-service:latest ."
-                        }
-                    }
+        stage('Deploy To Kubernetes') {
+            steps {
+                withKubeConfig(
+                    caCertificate: '', 
+                    clusterName: 'devops-k8s-cluster', 
+                    contextName: 'devops-k8s-cluster', 
+                    credentialsId: 'k8-cred', 
+                    namespace: 'devops-project', 
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
+                    sh "kubectl apply -f etudiant-dep.yml"
                 }
             }
+        }
 
-            stage('Push Docker Image') {
-                steps {
-                    script {
-                        withDockerRegistry(credentialsId: 'docker-cred') {
-                            sh "docker push samixouerfelli/etudiant-service:latest"
-                        }
-                    }
+        stage('Verify the Deployment') {
+            steps {
+                withKubeConfig(
+                    caCertificate: '', 
+                    clusterName: 'devops-k8s-cluster', 
+                    contextName: 'devops-k8s-cluster', 
+                    credentialsId: 'k8-cred', 
+                    namespace: 'devops-project', 
+                    serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443'
+                ) {
+                    sh "kubectl get pods -n devops-project"
+                    sh "kubectl get svc -n devops-project"
                 }
             }
-
-            stage('Deploy To Kubernetes') {
-                steps {
-                    withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
-                        sh "kubectl apply -f etudiant-dep.yml"
-
-                    }
-                }
-            }
-
-            stage('Verify the Deployment') {
-                steps {
-                    withKubeConfig(caCertificate: '', clusterName: 'devops-k8s-cluster', contextName: 'devops-k8s-cluster', credentialsId: 'k8-cred', namespace: 'devops-project', serverUrl: 'https://devops-k8s-devops-resource--8172e1-o65hj7y3.hcp.centralus.azmk8s.io:443') {
-                        sh "kubectl get pods -n devops-project"
-                        sh "kubectl get svc -n devops-project"
-                    }
-                }
-            }
+        }
     }
 }
