--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -86,7 +86,7 @@ spec:
     spec:
       containers:
         - name: myapp
-          image: lookabj/myapp:latest
+          image: 10.0.2.15:8081/repository/docker-repo/lookabj/myapp:${BUILD_NUMBER}
           imagePullPolicy: Always
           ports:
             - containerPort: 8089
