--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 # DB Configuration :
-spring.datasource.url=jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,7 +16,6 @@ management.endpoints.web.exposure.include=prometheus,health,info,metrics
 management.endpoint.health.show-details=always
 
 # Enable Prometheus endpoint
-management.prometheus.metrics.export.enabled=true
 management.metrics.tags.application=${spring.application.name}
 
 
