--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -89,7 +89,7 @@ spec:
       containers:
         - name: myapp
           image: 10.0.2.15:8081/repository/docker-repo/lookabj/myapp:${BUILD_NUMBER}
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent  # Ensures Kubernetes tries to use the locally loaded image first
           ports:
             - containerPort: 8089
               name: http
