--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 # DB Configuration :
-#spring.datasource.url=jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true
-spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-db:3307/tpfoyer?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
