--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Actuator/Metrics port
 management.server.port=8091
-management.endpoints.web.exposure.include=prometheus,health,info,metrics
 management.endpoint.health.show-details=always
-
+management.endpoints.web.exposure.include=prometheus,health,info,metrics
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/actuator
 # Enable Prometheus endpoint
 management.metrics.tags.application=${spring.application.name}
 
