--- a/setup-grafana.yaml
+++ b/setup-grafana.yaml
@@ -15,8 +15,11 @@ data:
           "name": "Prometheus",
           "orgId": 1,
           "type": "prometheus",
-          "url": "http://prometheus:9090",
-          "version": 1
+          "url": "http://prometheus.monitoring.svc.cluster.local:9090",
+          "version": 1,
+          "jsonData": {
+            "timeInterval": "15s"
+          }
         }
       ]
     }
