--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ server.port=8089
 server.servlet.context-path=/tpfoyer
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
