--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
 
 
 
