--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DB Configuration:
-spring.datasource.url=jdbc:mysql://database-1.cxomsk4ske3o.eu-north-1.rds.amazonaws.com:3306/tpfoyer?createDatabaseIfNotExist=true
-spring.datasource.username=admin
-spring.datasource.password=Root1234
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
