--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -12,12 +12,18 @@ spec:
       labels:
         app: devops
     spec:
+    automountServiceAccountToken: false
       containers:
         - name: devops
           image: louaykh1/devops:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 
+          resources:
+            requests:
+              memory: "256Mi"
+            limits:
+              memory: "512Mi"
 
 
 ---
