--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>tp-foyer</description>
     <properties>
         <java.version>17</java.version>
+         <jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
     </properties>
     <dependencies>
         <dependency>
@@ -64,7 +65,7 @@
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.7</version>
+            <version>0.8.6</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -98,7 +99,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>0.8.6</version>
                 <executions>
                     <execution>
                         <id>jacoco-initialize</id>
