--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # DB Configuration:
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
+spring.datasource.url=jdbc:mysql://database-1.cxomsk4ske3o.eu-north-1.rds.amazonaws.com:3306/tpfoyer?createDatabaseIfNotExist=true
+spring.datasource.username=admin
+spring.datasource.password=Root1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Web Server (Tomcat) configuration:
-server.port=8089
+server.port=8080
 server.servlet.context-path=/tpfoyer
